system/themes/default/src/main.css
/* ... */
.tl_panel_bottom {
	margin-top:1px;
	padding:6px 6px 6px 0;
	background:#f3f3f3;
	border-top:1px solid #bbb;
	text-align:right;
}
.tl_version_panel .tl_select {
	width:240px;
}
.mac .tl_version_panel .tl_select,.mac .tl_panel_bottom .tl_select {
	font-size:11px;
}
.safari .tl_version_panel,.ie .tl_version_panel {
	overflow:hidden; /* see #5854 */
}
.tl_version_panel .tl_formbody {
	position:relative;
}
.safari .tl_version_panel .tl_formbody,.ie .tl_version_panel .tl_formbody {
	float:right; /* see #5854 */
}
.tl_version_panel .tl_submit {
	margin-top:1px;
	vertical-align:top;
}
.webkit .tl_version_panel .tl_submit,.ie .tl_version_panel .tl_submit {
	padding-top:4px;
	padding-bottom:4px;
}
.opera .tl_version_panel .tl_submit {
	padding-top:3px;
	padding-bottom:3px;
	margin-top:-1px;
}
.tl_version_panel img {
	position:relative;
	top:4px;
	vertical-align:top;
}
.tl_subpanel {
	padding-left:24px;
	float:right;
}
.tl_subpanel strong {
	line-height:21px;
}
.tl_submit_panel {
	padding-left:6px;
}
.tl_img_submit {
	position:relative;
	top:3px;
	vertical-align:top;
}
.tl_panel .active,.tl_panel_bottom .active,#search .active {
	background:#ffd;
}
.tl_panel .tl_select {
	width:116px;
}
.tl_filter .tl_select {
	width:104px;
}
.tl_limit .tl_select {
	width:90px;
}
.tl_search .tl_text {
	width:66px;
}
.mac .tl_panel .tl_select,.mac .tl_panel .tl_text {
	font-size:11px;
}
.mac .tl_panel select {
	max-width:164px;
}

/* Boxes */
.tl_xpl,.tl_formbody_edit {
	padding:0 18px;
}
.popup .tl_formbody_edit {
	padding-bottom:52px;
}
.tl_tbox {
	padding:0 0 26px;
}
.tl_box {
	padding:12px 0 26px;
	border-top:1px solid #ddd;
}
.tl_box h3,.tl_tbox h3,.tl_xpl h3 {
	margin:0;
	padding:14px 0 1px;
	font-weight:bold;
}
.tl_box h4,.tl_tbox h4 {
	margin:6px 0 0;
	padding:0;
	font-weight:bold;
	font-size:11px;
}
.tl_tbox.theme_import h3,.tl_tbox.theme_import h4,.tl_tbox.theme_import p {
	line-height:1.5;
}
.tl_help,.tl_help a {
	margin-bottom:0;
	padding:1px 0;
	line-height:normal;
	font-size:10px;
	color:#999;
}
.tl_help a:hover,.tl_help a:focus,.tl_help a:active {
	text-decoration:underline;
}
.tl_formbody_submit {
	border-top:1px solid #bbb;
}
.popup .tl_formbody_submit {
	z-index:5;
	position:fixed;
	left:0;
	bottom:0;
	width:100%;
	height:52px;
}
.tl_submit_container {
	padding:12px 18px;
	background:#f3f3f3;
	border-top:1px solid #fff;
}
.maintenance_inactive .tl_submit_container {
	background:none;
	margin:-12px 0 28px;
	padding-top:0;
	padding-bottom:0;
	border:0;
}
.maintenance_inactive {
	margin-top:48px;
}
#tl_buttons+.maintenance_inactive {
	margin-top:0;
}
#search {
	margin:18px 18px -9px;
	text-align:right;
}
#search .tl_text {
	width:160px;
	padding:3px 2px;
}
.mac #search .tl_text {
	padding:4px 2px;
}
.tl_edit_preview {
	margin-top:18px;
}
.tl_edit_preview img {
	padding:2px;
	border:1px solid #ddd;
	background:#fff;
	box-shadow:0 1px 3px #ddd;
}

/* Rebuild the search index */
#tl_rebuild_index {
	padding:0 18px 18px;
	line-height:1.5;
}
#index_note {
	margin:24px 0 18px;
	padding:11px 12px 12px;
	background:#ffc;
	border:1px solid #f90;
	line-height:1;
	font-size:14px;
}
#index_loading {
	margin:0 0 12px;
	padding:12px 12px 12px 36px;
	background:url("images/loading.gif") no-repeat 2px center;
	line-height:1;
	font-size:16px;
	color:#4b85ba;
}
#index_complete {
	margin:0 0 12px;
	padding:12px 12px 12px 36px;
	background:url("images/help.gif") no-repeat left center;
	line-height:1;
	font-size:16px;
	color:#77ac45;
}

/* Listing */
.tl_listing {
	width:705px;
	margin:2px 0 !important;
}
.tl_listing_container {
	padding:2px 0;
	margin:24px 18px;
}
.tl_folder_list,.tl_folder_tlist {
	padding:2px 0 3px;
	border-bottom:1px solid #e9e9e9;
	background:#f3f3f3;
	font-weight:bold;
}
.tl_folder_tlist {
	border-top:1px solid #e9e9e9;
}
.tl_file,.tl_file_list {
	padding:1px 0;
	border-bottom:1px solid #e9e9e9;
	background:#fff;
}
.tl_file_list {
	padding:2px 0 3px;
}
.tl_right_nowrap {
	padding:2px 0;
	text-align:right;
	white-space:nowrap;
}
.tl_file a:hover,.tl_file a:focus,.tl_file a:active {
	color:#555;
}
.tl_listing_container .tl_content ul li > * {
	vertical-align:middle;
}

/* List view */
.tl_listing tr.odd td {
	background-color:#fafafa;
}
.tl_listing th,.tl_listing td {
	padding-left:6px !important;
	padding-right:6px !important;
}
.list_view .tl_listing img {
	vertical-align:-4px;
}
.list_view .tl_listing img.theme_preview {
	margin:3px 6px 3px 0;
	vertical-align:middle;
}
.tl_show {
	width:705px;
	margin:0 18px 18px;
	padding:9px 0 18px;
}
.tl_bg {
	background:#f6f6f6;
}
.tl_show td {
	padding:4px 0;
}
.tl_label {
	margin-right:12px;
	font-weight:bold;
	white-space:nowrap;
}
.tl_empty {
	margin:0;
	padding:12px 6px 6px;
}
.tl_empty_parent_view {
	margin:0;
	padding:18px 0 0;
}
.tl_noopt {
	margin:0 0 -1px;
}
.tl_select_trigger {
	padding:0 6px 3px 0;
	text-align:right;
}
.tl_select_label {
	position:relative;
	top:-2px;
	color:#999;
	font-size:10px;
}

/* Parent view */
.tl_header {
	width:693px;
	padding:6px;
	background:#f9f9f9;
	border-top:1px solid #ddd;
	border-bottom:1px solid #ddd;
}
.tl_header_table {
	padding:3px 0;
	line-height:16px;
}
.tl_content_header {
	padding:2px 6px 3px;
	border-bottom:1px solid #e9e9e9;
	background:#f6f6f6;
	font-weight:bold;
}
.tl_content {
	width:693px;
	padding:6px;
	border-bottom:1px solid #e9e9e9;
	overflow:hidden;
	position:relative;
}
.tl_content.wrapper_start,.tl_content.wrapper_separator,.tl_content.wrapper_stop {
	background:#f3f3f3;
}
.tl_content.wrapper_start,.tl_content.wrapper_separator {
	border-bottom:0;
}
.tl_content.wrapper_stop,.tl_content.wrapper_separator {
	border-top:0;
}
.tl_content.wrapper_start h1 {
	margin:0 0 9px 6px;
}
.tl_content.indent {
	width:673px;
	border-left:10px solid #f3f3f3;
	border-right:10px solid #f3f3f3;
}
.no_padding {
	padding:2px 6px;
}
.tl_content h1 {
	padding:0;
	margin:0 0 12px;
}
.tl_content pre {
	margin-top:3px;
	margin-bottom:3px;
	word-break:break-all;
	white-space:pre-wrap;
}
/* ... */

